--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "@vue/eslint-config-prettier": "^7.0.0",
     "babel-eslint": "^10.1.0",
     "css-loader": "^6.2.0",
+    "csv-parser": "^3.0.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "nanoid": "^3.3.2",
+    "nodemon": "^2.0.15",
     "prettier": "^2.6.1",
     "style-loader": "^3.2.1",
-    "vue-template-compiler": "^2.6.11",
-    "nodemon": "^2.0.15",
-    "csv-parser": "^3.0.0"
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
